# ConsensusInvest

./: .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml  start cx.bat
consensusinvest/: __init__.py  app.py  main.py
consensusinvest/agent_swarm/: __init__.py  config.py  llm.py  models.py  presentation.py  repository.py  router.py  schemas.py  service.py  sqlite_repository.py
consensusinvest/common/: errors.py  response.py
consensusinvest/entities/: __init__.py  repository.py  (+3 more)
data/: evidence_store.sqlite3  runtime.agent_swarm.sqlite3  runtime.entities.sqlite3  runtime.report.sqlite3  runtime.runtime_events.sqlite3  runtime.search_agent.sqlite3  runtime.workflow.sqlite3
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_agent_runtime_events.py  test_agent_swarm.py  test_agent_swarm_presentation.py  test_agent_swarm_repository_sqlite.py  test_agents_judgments_api.py  test_entities_repository_sqlite.py  test_evidence_entity_workflow_config_api.py  test_evidence_normalizer.py  test_evidence_store.py  test_evidence_store_sqlite.py  test_evidence_structuring.py  test_report_module.py  test_report_module_repository_sqlite.py  test_runtime_env.py  test_runtime_event_archive.py  test_runtime_events_repository.py  test_search_agent_pool.py  test_search_agent_router.py  test_search_evidence_swarm_sqlite_e2e.py  test_search_market_snapshot_ingest.py  test_search_providers.py  test_workflow_api.py  test_workflow_orchestrator.py  test_workflow_repository_sqlite.py
(+163 files in other folders)
