[project]
name = "consensusinvest"
version = "0.1.0"
description = "Evidence-driven A-share investment research system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/consensusinvest"]

[project.scripts]
consensusinvest = "consensusinvest.main:run"
